--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,25 @@
+body{
+    background: linear-gradient(rgb(0, 0, 0), rgb(0, 255, 8));
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    font-family: "Doto", sans-serif;
+}
 
-/* 
+h1{
+    padding-top:90px ;
+    color: rgb(0, 255, 0);
+    font-size: 70px;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.seconds div{
+    display: inline-flex;
+    font-size: 50px;
+    padding: 30px;
+    margin: 10px;
+    background-color: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(2px);
+    color: rgb(0, 255, 0);
+    border-radius: 5px;
+    font-family: "Doto", sans-serif;
+}
